force-app/main/default/objects/nFORCE__Widget__c/fields/nFORCE__Data__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Data__c</fullName>
    <description>This field is optional. It is manually populated. It contains JSON formatter parameters for the widget.</description>
    <label>Data</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>