force-app/main/default/objects/nFORCE__Widget__c/fields/nFORCE__Icon__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Icon__c</fullName>
    <description>This field is currently not being used</description>
    <label>Icon</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>