force-app/main/default/objects/nFORCE__Widget__c/fields/nFORCE__Is_Narrative__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Narrative__c</fullName>
    <description>This field is optional. This field is populated automatically by a formula based on the selection in nFORCE__Type__c. This type of widget displays the deprecated Live Editor.</description>
    <formula>IF(ISPICKVAL(nFORCE__Type__c, &apos;Narrative&apos;) || (ISPICKVAL(nFORCE__Type__c, &apos;Knockout&apos;) &amp;&amp; CONTAINS( Name, &apos;Narrative&apos;)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Narrative</label>
    <type>Checkbox</type>
</CustomField>