force-app/main/default/objects/nFORCE__Widget__c/fields/nFORCE__Parameters__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Parameters__c</fullName>
    <description>This field is optional. The value should include JSON parameters to configure vendor-specific widgets. {htmlGenerator: nCinoAwesomeHtmlKnockoutGenerator}</description>
    <label>Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>