force-app/main/default/objects/nFORCE__Widget__c/fields/nFORCE__View__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__View__c</fullName>
    <description>This field is optional. It is manually populated. This field is used to specify HTML markup to use when loading and displaying the widget.</description>
    <label>View</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>